--- a/templates/hosts.j2
+++ b/templates/hosts.j2
@@ -2,7 +2,9 @@
 {{ '{:<15} {:<} {:<}'.format(preconf.hostname.ipv4, preconf.hostname.fqdn, preconf.hostname.hostname) }}
 
 # The following lines are desirable for IPv6 capable hosts
-::1     localhost ip6-localhost ip6-loopback
+::1     ip6-localhost ip6-loopback
+fe00::0 ip6-localnet
+ff00::0 ip6-mcastprefix
 ff02::1 ip6-allnodes
 ff02::2 ip6-allrouters
 
